# postal-index-matcher

./: .env.example  .gitignore  MIGRATION_GUIDE.md  README.md  REFACTORING_PLAN.md  build.bat  build_exe.bat  build_exe.spec  build_review_ui_exe.ps1  config.py  debug_normalization.py  main.py  pyproject.toml  requirements.txt  review_ui.spec  run_debug.bat  start_review_ui.cmd  start_review_ui.pyw
data/: street_aliases.csv
handlers/: column_mapping_handler.py  excel_handler.py  init.py
models/: address.py  init.py  magistral_record.py
search/: hybrid_search.py  init.py  magistral_loader.py  normalizer.py  similarity.py  ukrposhta_classifier.py  ukrposhta_offline_cache.py
tests/: test_address_normalization.py  test_classifier_local_candidate_cache.py  test_classifier_local_house_cache.py  test_cli_and_config.py  test_excel_handler_structure.py  test_file_manager.py  test_hybrid_search.py  test_magistral_loader.py  test_main_window_structure.py  test_matcher_regressions.py  test_normalizer.py  test_parser.py  test_performance_optimizations.py  test_processing_manager.py  test_registry.py  test_review.py  test_review_ui.py  test_search_manager.py  test_search_quality_tool.py  test_source_integrity.py  test_ukrposhta_offline_cache.py  test_windows_launcher.py
tools/: analyze_search_quality.py  build_ukrposhta_offline_cache.py
ui/: README.md  init.py  main_window.py  main_window_backup.py  main_window_refactored_example.py
utils/: address_parser.py  cache_manager.py  init.py  logger.py  settings_manager.py  text_normalizer.py  ukrposhta_index.py  undo_manager.py
(+34 files in other folders)
