[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ukrposhta-address-matcher"
version = "0.1.0"
description = "Windows-ready batch matcher for Ukrposhta registries and address classifier."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yurii Mykhailyk" }
]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
match-registry = "ukrposhta_address_matcher.cli:main"
refresh-cache = "ukrposhta_address_matcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

