[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ukrposhta-address-matcher"
version = "0.1.0"
description = "Windows-ready batch matcher for Ukrposhta registries and address classifier."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Yurii Mykhailyk" }
]
license = { text = "Proprietary" }
dependencies = []

[project.scripts]
match-registry = "ukrposhta_address_matcher.cli:match_registry_main"
refresh-cache = "ukrposhta_address_matcher.cli:refresh_cache_main"
review-ui = "ukrposhta_address_matcher.cli:review_ui_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ukrposhta_address_matcher = ["web/*.html", "web/*.js", "web/*.css"]
